--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="privacy-policy">개인정보처리방침 - anse.ai</title>
-<meta name="description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다." data-i18n="privacy-intro"/>
+<title data-i18n="privacy-policy">개인정보처리방침 - anse.ai.kr</title>
+<meta name="description" content="anse.ai.kr의 개인정보처리방침에 대해 안내합니다." data-i18n="privacy-intro"/>
 <link rel="canonical" href="https://anse.ai.kr/privacy.html"/>
 
-<meta property="og:title" content="개인정보처리방침 - anse.ai" data-i18n="privacy-policy"/>
-<meta property="og:description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다." data-i18n="privacy-intro"/>
+<meta property="og:title" content="개인정보처리방침 - anse.ai.kr" data-i18n="privacy-policy"/>
+<meta property="og:description" content="anse.ai.kr의 개인정보처리방침에 대해 안내합니다." data-i18n="privacy-intro"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/privacy.html"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
@@ -63,7 +63,7 @@
 <div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary shrink-0">
 <span class="material-symbols-outlined text-[20px] text-white">leaderboard</span>
 </div>
-<h2 class="text-lg font-bold tracking-tight dark:text-white">anse.ai</h2>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">anse.ai.kr</h2>
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
@@ -141,16 +141,22 @@
                         </div>
                     </section>
                     <!-- Subscription Status -->
-                    <section class="rounded-xl border border-primary/20 bg-primary/5 p-6 border-dashed">
+                    <section id="subscription-section" class="rounded-xl border border-primary/20 bg-primary/5 p-6 border-dashed">
                         <div class="flex flex-col gap-4">
                             <div class="flex flex-col gap-1">
                                 <h5 class="font-bold dark:text-white" data-i18n="subscribe">구독하기</h5>
-                                <p class="text-xs text-[#49699c] dark:text-slate-400" data-i18n="subscription-benefit">구독 시 일 1~2회 시장 지표 및 인공지능 분석 리포트를 이메일로 보내드립니다.</p>
+                                <p id="subscription-status-text" class="text-xs text-[#49699c] dark:text-slate-400" data-i18n="subscription-benefit">구독 시 일 1~2회 시장 지표 및 인공지능 분석 리포트를 이메일로 보내드립니다.</p>
                             </div>
-                            <a href="https://pola.so" target="_blank" class="w-fit px-6 py-2.5 bg-primary text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
-                                <span class="material-symbols-outlined text-sm">stars</span>
-                                <span data-i18n="subscribe">구독하기</span>
-                            </a>
+                            <div id="subscription-actions" class="flex gap-2">
+                                <button id="subscribe-btn" class="w-fit px-6 py-2.5 bg-primary text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
+                                    <span class="material-symbols-outlined text-sm">stars</span>
+                                    <span data-i18n="subscribe">구독하기</span>
+                                </button>
+                                <button id="cancel-subscription-btn" class="hidden w-fit px-6 py-2.5 bg-red-500 text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
+                                    <span class="material-symbols-outlined text-sm">cancel</span>
+                                    <span>구독 취소</span>
+                                </button>
+                            </div>
                         </div>
                     </section>
                 </div>
@@ -164,7 +170,7 @@
         <article class="prose dark:prose-invert max-w-none">
             <h1 class="text-3xl font-black mb-8 dark:text-white" data-i18n="privacy-policy">개인정보처리방침</h1>
             
-            <p class="mb-8 leading-relaxed" data-i18n="privacy-intro">본 웹사이트 ("anse")는 사용자 여러분의 개인정보를 중요하게 생각하며, 「개인정보 보호법」 및 관련 법령을 준수하고 있습니다.</p>
+            <p class="mb-8 leading-relaxed" data-i18n="privacy-intro">본 웹사이트 ("anse.ai.kr")는 사용자 여러분의 개인정보를 중요하게 생각하며, 「개인정보 보호법」 및 관련 법령을 준수하고 있습니다.</p>
 
             <section class="mb-8">
                 <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="privacy-section-1-t">1. 수집하는 개인정보 항목</h2>
@@ -193,7 +199,7 @@
 
             <section class="mb-8">
                 <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="privacy-section-6-t">6. 개인정보 보호 책임자</h2>
-                <p class="leading-relaxed" data-i18n="privacy-section-6-d">개인정보 관련 문의는 서비스 내 '문의하기' 또는 운영자 메일을 통해 주시기 바랍니다.</p>
+                <p class="leading-relaxed" data-i18n="privacy-section-6-d">개인정보 관련 문의는 서비스 내 '문의하기' 또는 운영자 메일(info@anse.ai.kr)을 통해 주시기 바랍니다.</p>
             </section>
 
             <section class="mb-8">
@@ -229,27 +235,17 @@
 </main>
 
 <script>
-    // Theme switcher logic
     const themeSwitcher = document.getElementById('theme-switcher');
     const updateThemeIcon = (isDarkMode) => {
         const icon = document.querySelector('#theme-switcher .material-symbols-outlined');
-        if (icon) {
-            icon.textContent = isDarkMode ? 'dark_mode' : 'light_mode';
-        }
+        if (icon) icon.textContent = isDarkMode ? 'dark_mode' : 'light_mode';
     };
-
     const applySavedTheme = () => {
         const savedTheme = localStorage.getItem('theme');
         const isDarkMode = savedTheme === 'dark';
-        if (isDarkMode) {
-            document.documentElement.classList.add('dark');
-            updateThemeIcon(true);
-        } else {
-            document.documentElement.classList.remove('dark');
-            updateThemeIcon(false);
-        }
+        if (isDarkMode) document.documentElement.classList.add('dark');
+        updateThemeIcon(isDarkMode);
     };
-
     if (themeSwitcher) {
         themeSwitcher.addEventListener('click', () => {
             const isDarkMode = document.documentElement.classList.toggle('dark');
@@ -257,31 +253,21 @@
             updateThemeIcon(isDarkMode);
         });
     }
-
     document.addEventListener('DOMContentLoaded', () => {
         applySavedTheme();
         const menuButton = document.getElementById('menu-button');
         const mobileMenu = document.getElementById('mobile-menu');
-        if (menuButton && mobileMenu) {
-            menuButton.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
-            });
-        }
+        if (menuButton && mobileMenu) menuButton.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
     });
 </script>
 
 <script>
-    // Supabase configuration - Hardcoded for local development
     const SB_URL = 'https://bksuhgixknsqzzxahuni.supabase.co';
     const SB_KEY = 'sb_publishable_K47Ui76Xyb5hqjAOqJsbYg_u0ZFJTdf';
-    
     let supabaseClient;
     try {
-        const { createClient } = supabase;
-        supabaseClient = createClient(SB_URL, SB_KEY);
-    } catch (e) {
-        console.error("Supabase Initialization Error:", e.message);
-    }
+        supabaseClient = supabase.createClient(SB_URL, SB_KEY);
+    } catch (e) { console.error(e); }
 
     const loginButton = document.getElementById('login-button');
     const userProfile = document.getElementById('user-profile');
@@ -292,35 +278,11 @@
     const accountModal = document.getElementById('account-modal');
     const closeModal = document.getElementById('close-modal');
 
-    if (userAvatar) {
-        userAvatar.addEventListener('click', (e) => {
-            e.stopPropagation();
-            profileDropdown.classList.toggle('hidden');
-        });
-    }
-
-    window.addEventListener('click', () => {
-        if (profileDropdown) profileDropdown.classList.add('hidden');
-    });
-
-    if (myAccountBtn) {
-        myAccountBtn.addEventListener('click', () => {
-            accountModal.classList.remove('hidden');
-            profileDropdown.classList.add('hidden');
-        });
-    }
-
-    if (closeModal) {
-        closeModal.addEventListener('click', () => {
-            accountModal.classList.add('hidden');
-        });
-    }
-
-    if (accountModal) {
-        accountModal.addEventListener('click', (e) => {
-            if (e.target === accountModal) accountModal.classList.add('hidden');
-        });
-    }
+    if (userAvatar) userAvatar.addEventListener('click', (e) => { e.stopPropagation(); profileDropdown.classList.toggle('hidden'); });
+    window.addEventListener('click', () => { if (profileDropdown) profileDropdown.classList.add('hidden'); });
+    if (myAccountBtn) myAccountBtn.addEventListener('click', () => { accountModal.classList.remove('hidden'); profileDropdown.classList.add('hidden'); });
+    if (closeModal) closeModal.addEventListener('click', () => accountModal.classList.add('hidden'));
+    if (accountModal) accountModal.addEventListener('click', (e) => { if (e.target === accountModal) accountModal.classList.add('hidden'); });
 
     async function updateAuthState() {
         if (!supabaseClient) return;
@@ -330,49 +292,90 @@
                 loginButton.classList.add('hidden');
                 userProfile.classList.remove('hidden');
                 const avatarUrl = user.user_metadata.avatar_url;
-                const fullName = user.user_metadata.full_name || 'User';
-                const email = user.email;
                 if (avatarUrl) {
                     userAvatar.style.backgroundImage = `url('${avatarUrl}')`;
                     document.getElementById('modal-user-avatar').style.backgroundImage = `url('${avatarUrl}')`;
                 }
-                document.getElementById('dropdown-user-name').textContent = fullName;
-                document.getElementById('dropdown-user-email').textContent = email;
-                document.getElementById('modal-user-name').textContent = fullName;
-                document.getElementById('modal-user-email').textContent = email;
+                document.getElementById('dropdown-user-name').textContent = user.user_metadata.full_name || 'User';
+                document.getElementById('dropdown-user-email').textContent = user.email;
+                document.getElementById('modal-user-name').textContent = user.user_metadata.full_name || 'User';
+                document.getElementById('modal-user-email').textContent = user.email;
+                checkSubscriptionStatus(user.id);
             } else {
                 loginButton.classList.remove('hidden');
                 userProfile.classList.add('hidden');
             }
-        } catch (err) {
-            loginButton.classList.remove('hidden');
-            userProfile.classList.add('hidden');
-        }
+        } catch (err) { }
     }
+
+    async function checkSubscriptionStatus(userId) {
+        const statusText = document.getElementById('subscription-status-text');
+        const subscribeBtn = document.getElementById('subscribe-btn');
+        const cancelBtn = document.getElementById('cancel-subscription-btn');
+        if (!statusText || !subscribeBtn || !cancelBtn) return;
+        try {
+            const { data } = await supabaseClient.from('subscriptions').select('status').eq('user_id', userId).maybeSingle();
+            if (data && data.status === 'active') {
+                statusText.innerHTML = '<span class="text-emerald-500 font-black">구독 중</span> (매일 리포트가 발송됩니다)';
+                subscribeBtn.classList.add('hidden');
+                cancelBtn.classList.remove('hidden');
+            } else {
+                statusText.textContent = i18n.translate("subscription-benefit");
+                subscribeBtn.classList.remove('hidden');
+                cancelBtn.classList.add('hidden');
+            }
+        } catch (err) { }
+    }
+
+    document.getElementById('subscribe-btn')?.addEventListener('click', async () => {
+        const { data: { user } } = await supabaseClient.auth.getUser();
+        if (!user) return alert("로그인이 필요합니다.");
+        const btn = document.getElementById('subscribe-btn');
+        btn.disabled = true;
+        const originalText = btn.innerHTML;
+        btn.textContent = "연결 중...";
+        try {
+            const response = await fetch('/api/create-checkout', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ user_id: user.id, user_email: user.email })
+            });
+            const result = await response.json();
+            if (result.url) window.location.href = result.url;
+            else alert("결제 페이지를 불러오지 못했습니다.");
+        } catch (err) { alert("오류가 발생했습니다."); }
+        finally { btn.disabled = false; btn.innerHTML = originalText; }
+    });
+
+    document.getElementById('cancel-subscription-btn')?.addEventListener('click', async () => {
+        if (!confirm("정말 구독을 취소하시겠습니까?")) return;
+        const { data: { user } } = await supabaseClient.auth.getUser();
+        const btn = document.getElementById('cancel-subscription-btn');
+        btn.disabled = true;
+        btn.textContent = "처리 중...";
+        try {
+            const response = await fetch('/api/cancel-subscription', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ user_id: user.id })
+            });
+            const result = await response.json();
+            if (result.success) { alert("구독이 취소되었습니다."); window.location.reload(); }
+            else alert("취소 실패.");
+        } catch (err) { alert("오류 발생."); }
+        finally { btn.disabled = false; btn.textContent = "구독 취소"; }
+    });
 
     if (loginButton) {
         loginButton.addEventListener('click', async () => {
             await supabaseClient.auth.signInWithOAuth({
                 provider: 'google',
-                options: {
-                    queryParams: { prompt: 'select_account', access_type: 'offline' },
-                    redirectTo: window.location.origin + '/privacy.html'
-                }
+                options: { queryParams: { prompt: 'select_account', access_type: 'offline' }, redirectTo: window.location.origin + '/privacy.html' }
             });
         });
     }
-
-    if (logoutButtonDropdown) {
-        logoutButtonDropdown.addEventListener('click', async () => {
-            await supabaseClient.auth.signOut();
-            window.location.reload(); 
-        });
-    }
-
-    if (supabaseClient) {
-        supabaseClient.auth.onAuthStateChange(() => updateAuthState());
-        updateAuthState();
-    }
+    if (logoutButtonDropdown) logoutButtonDropdown.addEventListener('click', async () => { await supabaseClient.auth.signOut(); window.location.reload(); });
+    if (supabaseClient) { supabaseClient.auth.onAuthStateChange(() => updateAuthState()); updateAuthState(); }
 </script>
 </body>
 </html>
