--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
 
 <!-- Existing styles and icons -->
-<link rel="stylesheet" href="style.css"/> <!-- Keep this for now, will remove later if Tailwind replaces all -->
+<!-- Keep this for now, will remove later if Tailwind replaces all -->
 <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
 <!-- Tailwind CSS and Fonts from code.html -->
