--- a/public/index.html
+++ b/public/index.html
@@ -176,32 +176,64 @@
                 </button>
             </header>
             <main class="flex-1 p-8 overflow-y-auto">
-                <div class="flex flex-col gap-8">
-                    <!-- User Profile Info -->
-                    <section class="flex items-center gap-4">
-                        <div id="modal-user-avatar" class="h-16 w-16 rounded-full bg-cover bg-center ring-4 ring-primary/10"></div>
-                        <div class="flex flex-col">
-                            <h4 id="modal-user-name" class="text-lg font-black dark:text-white"></h4>
-                            <p id="modal-user-email" class="text-sm text-[#49699c] dark:text-slate-400"></p>
+                <!-- Overview Section -->
+                <div id="section-overview" class="flex flex-col gap-8">
+                    <div class="flex flex-col gap-8">
+                        <!-- User Profile Info -->
+                        <section class="flex items-center gap-4">
+                            <div id="modal-user-avatar" class="h-16 w-16 rounded-full bg-cover bg-center ring-4 ring-primary/10"></div>
+                            <div class="flex flex-col">
+                                <h4 id="modal-user-name" class="text-lg font-black dark:text-white"></h4>
+                                <p id="modal-user-email" class="text-sm text-[#49699c] dark:text-slate-400"></p>
+                            </div>
+                        </section>
+                        <!-- Subscription Status -->
+                        <section id="subscription-section" class="rounded-xl border border-primary/20 bg-primary/5 p-6 border-dashed">
+                            <div class="flex flex-col gap-4">
+                                <div class="flex flex-col gap-1">
+                                    <h5 class="font-bold dark:text-white" data-i18n="subscribe">구독하기</h5>
+                                    <p id="subscription-status-text" class="text-xs text-[#49699c] dark:text-slate-400" data-i18n="subscription-benefit">구독 시 일 1~2회 시장 지표 및 인공지능 분석 리포트를 이메일로 보내드립니다.</p>
+                                </div>
+                                <div id="subscription-actions" class="flex gap-2">
+                                    <button id="subscribe-btn" class="w-fit px-6 py-2.5 bg-primary text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
+                                        <span class="material-symbols-outlined text-sm">stars</span>
+                                        <span data-i18n="subscribe">구독하기</span>
+                                    </button>
+                                    <button id="cancel-subscription-btn" class="hidden w-fit px-6 py-2.5 bg-red-500 text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
+                                        <span class="material-symbols-outlined text-sm">cancel</span>
+                                        <span>구독 취소</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+
+                <!-- Settings Section -->
+                <div id="section-settings" class="hidden flex flex-col gap-8">
+                    <section class="flex flex-col gap-6">
+                        <div class="flex flex-col gap-2">
+                            <h5 class="font-bold dark:text-white" data-i18n="report-language">리포트 언어 설정</h5>
+                            <p class="text-xs text-[#49699c] dark:text-slate-400" data-i18n="report-lang-desc">이메일 리포트를 수신할 언어를 선택해주세요.</p>
+                            <div class="flex gap-3 mt-2">
+                                <label class="flex items-center gap-2 cursor-pointer group">
+                                    <input type="radio" name="report-lang" value="ko" checked class="w-4 h-4 text-primary border-slate-300 focus:ring-primary">
+                                    <span class="text-sm font-medium dark:text-slate-300 group-hover:text-primary transition-colors">한국어 (Korean)</span>
+                                </label>
+                                <label class="flex items-center gap-2 cursor-pointer group">
+                                    <input type="radio" name="report-lang" value="en" class="w-4 h-4 text-primary border-slate-300 focus:ring-primary">
+                                    <span class="text-sm font-medium dark:text-slate-300 group-hover:text-primary transition-colors">영어 (English)</span>
+                                </label>
+                            </div>
                         </div>
-                    </section>
-                    <!-- Subscription Status -->
-                    <section id="subscription-section" class="rounded-xl border border-primary/20 bg-primary/5 p-6 border-dashed">
-                        <div class="flex flex-col gap-4">
-                            <div class="flex flex-col gap-1">
-                                <h5 class="font-bold dark:text-white" data-i18n="subscribe">구독하기</h5>
-                                <p id="subscription-status-text" class="text-xs text-[#49699c] dark:text-slate-400" data-i18n="subscription-benefit">구독 시 일 1~2회 시장 지표 및 인공지능 분석 리포트를 이메일로 보내드립니다.</p>
-                            </div>
-                            <div id="subscription-actions" class="flex gap-2">
-                                <button id="subscribe-btn" class="w-fit px-6 py-2.5 bg-primary text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
-                                    <span class="material-symbols-outlined text-sm">stars</span>
-                                    <span data-i18n="subscribe">구독하기</span>
-                                </button>
-                                <button id="cancel-subscription-btn" class="hidden w-fit px-6 py-2.5 bg-red-500 text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
-                                    <span class="material-symbols-outlined text-sm">cancel</span>
-                                    <span>구독 취소</span>
-                                </button>
-                            </div>
+
+                        <div class="pt-6 border-t border-[#e7ecf4] dark:border-[#1e293b]">
+                            <h5 class="font-bold dark:text-white mb-2" data-i18n="instant-report">즉시 리포트 발송</h5>
+                            <p class="text-xs text-[#49699c] dark:text-slate-400 mb-4" data-i18n="instant-report-desc">현재 시장 분석 리포트를 즉시 이메일로 발송합니다.</p>
+                            <button id="send-report-btn" class="w-fit px-6 py-2.5 bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white text-sm font-bold rounded-lg hover:bg-primary hover:text-white transition-all flex items-center gap-2">
+                                <span class="material-symbols-outlined text-sm">send</span>
+                                <span data-i18n="send-now">리포트 보내기</span>
+                            </button>
                         </div>
                     </section>
                 </div>
